Upgraded lombok to v.1.18.22. Removed "temp compilation fix"